style/mainGrid.css
html {
    box-sizing: border-box;
}

* {
    box-sizing: border-box;
    font-size: 0;
    margin: 0;
    padding: 0;
    border: 0;
}

body {
    background-image: url('../images/backdrops/amallal.jpg');
    background-repeat: no-repeat;
    background-size: cover;
}

.top-row {
    height: calc(100vh / 3);
}

#top-panel-left {
    width: calc(100vw / 4);
    height: inherit;
    float: left;
    /*background-color: gray;*/
    background-image: url('../images/archFrames/arch_toprow_medium.svg');
    background-repeat: no-repeat;
    background-size: cover;
}
#top-panel-left:hover {
    /* Add hover affects to top-leftmost window. */
}

#top-panel-center {
    width: calc(100vw / 2);
    height: inherit;
    float: left;
    /*background-color: lightpink;*/
    background-image: url('../images/archFrames/arch_toprow_long.svg');
    background-repeat: no-repeat;
    background-size: cover;
}
#top-panel-center:hover {
    /* Add hover affects to long top-center window. */
}

#top-panel-right {
    width: calc(100vw / 4);
    height: inherit;
    float: left;
    /*background-color: lightyellow;*/
    background-image: url('../images/archFrames/arch_toprow_medium.svg');
    background-repeat: no-repeat;
    background-size: cover;
}
#top-panel-left:hover {
    /* Add hover affects to top-rightmost window. */
}


.bottom-left {
    width: calc(100vw / 2);
    height: calc(100vh / 3 * 2);
    float: left;
} 

#anomie-marquee {
    width: inherit;
    height: calc(100vh / 3);
    background-color: #EEEEEE;
}

.portals {
    width: inherit;
    height: calc(100vh / 3);
    float: bottom;
}

#portal-a {
    width: calc(100vw / 8);
    height: inherit;
    float: left;
    /*background-color: darkseagreen;*/
    background-image: url('../images/archFrames/arch_short.svg');
    background-repeat: no-repeat;
    background-size: cover;
}
#portal-a:hover {
    /* Add hover affects to first portal tab. */
}

#portal-b {
    width: calc(100vw / 8);
    height: inherit;
    float: left;
    /*background-color: mediumpurple;*/
    background-image: url('../images/archFrames/arch_short.svg');
    background-repeat: no-repeat;
    background-size: cover;
}
#portal-b:hover {
    /* Add hover affects to first portal tab. */
}

#portal-c {
    width: calc(100vw / 8);
    height: inherit;
    float: left;
    /*background-color: khaki;*/
    background-image: url('../images/archFrames/arch_short.svg');
    background-repeat: no-repeat;
    background-size: cover;
}
#portal-c:hover {
    /* Add hover affects to second portal tab. */
}

#portal-d {
    width: calc(100vw / 8);
    height: inherit;
    float: left;
    /*background-color: mediumturquoise;*/
    background-image: url('../images/archFrames/arch_short.svg');
    background-repeat: no-repeat;
    background-size: cover;
}
#portal-d:hover {
    /* Add hover affects to third portal tab. */
}


.bottom-right {
    width: calc(100vw / 2);
    height: calc(100vh / 3 * 2);
    float: right;
}

#bottom-panel-left {
    width: calc(100vw / 4);
    height: inherit;
    float: left;
    /*background-color: darksalmon;*/
    background-image: url('../images/archFrames/arch_tall.svg');
    background-repeat: no-repeat;
    background-size: cover;
}
#bottom-panel-left:hover {
    /* Add hover affects to tall window. */
}

#bottom-panel-right {
    width: calc(100vw / 4);
    height: inherit;
    float: right;
    /*background-color: cornflowerblue;*/
    background-image: url('../images/archFrames/oct_window.svg');
    background-repeat: no-repeat;
    background-size: cover;
}
#bottom-panel-right:hover {
    /* Add hover affects to octagon window. */
}

